solved weird CSS positioning issues inside workspace as well as animation causing link/canvas alignment to be off by workspace element page offset

--- a/application/public/css/basic-component.css
+++ b/application/public/css/basic-component.css
@@ -3,7 +3,10 @@
 .basic-component {
 	width: 160px;
 	height: 80px;
-	position: relative;
+}
+
+.component {
+	position: absolute;
 	z-index: 20;
 }
 
