--- a/application/public/css/workspace.css
+++ b/application/public/css/workspace.css
@@ -108,6 +108,7 @@
 #wspaceHeader {
 	height: 13px;
 	width: 100%;
+	position: absolute;
 	z-index: 999;
 }
 
@@ -132,12 +133,14 @@
 
 .mainWorkspace {
 	width: 100%;
-	height: 100%;	
+	height: 100%;
+	position: relative;
 	background: url(../images/workspace/wspace-bg-3.png);
+	display: block;
 }
 
 .selectionBox {
-	position: relative;
+	position: absolute;
 /*	border: 2px solid #3399FF;
 	background-color: #B7D4F0;*/
 	border: 2px dashed #3399FF;
@@ -154,9 +157,9 @@
 }
 
 .fullBezier-basic {
-	position: absolute;
+	position: relative;
 	z-index: 0;
-	border: 1px solid red;
+/*	border: 1px solid red;*/
 }
 
 .compFocus {
